HD : dropzone added
dropzone created with drag and drop functionality

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,7 +8,8 @@ $cl-navblack: #363d4d;
 
 // Main
 
-p , a{
+p,
+a {
   font-family: $paragraph-family;
   font-size: 1rem;
 }
@@ -51,4 +52,20 @@ p , a{
       color: $cl-wt;
     }
   }
+}
+
+.dropzone {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  border-width: 2px;
+  border-radius: 2px;
+  border-color: #eeeeee;
+  border-style: dashed;
+  background-color: #fafafa;
+  color: #bdbdbd;
+  outline: none;
+  transition: border 0.24s ease-in-out;
 }
